--- a/EEG_101/android/app/src/main/AndroidManifest.xml
+++ b/EEG_101/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.eeg_project"
+    package="com.eeg_101"
     android:versionCode="1"
     android:versionName="1.0">
 
@@ -25,13 +25,9 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-        <activity
-            android:name=".components.EEGGraph.HistoryPlot" />
 
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-        <activity android:name=".components.connector.MuseActivity" />
-        <activity android:name=".components.EEGGraph.PSDPlot" />
-        <activity android:name=".components.EEGGraph.RandomPlot" />
+
 
     </application>
 
