--- a/EEG_101/package.json
+++ b/EEG_101/package.json
@@ -7,11 +7,13 @@
     "run-android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android"
   },
   "dependencies": {
+    "lodash": "^4.16.4",
     "react": "15.3.1",
     "react-native": "latest",
     "react-native-router-flux": "^3.35.0",
-    "react-native-swiper": "1.4.6"
+    "react-native-swiper": "1.4.6",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
-
-
 }
