--- a/EEG101/.gitignore
+++ b/EEG101/.gitignore
@@ -2,32 +2,15 @@
 #
 .DS_Store
 
-# Xcode
-#
-build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-project.xcworkspace
 
 # Android/IJ
 #
 *.iml
-.idea
+/.idea/workspace.xml
+/.idea/libraries
+/.idea/dictionaries
 .gradle
-local.properties
+/local.properties
 
 # node.js
 #
