--- a/EEG101/android/app/build.gradle
+++ b/EEG101/android/app/build.gradle
@@ -80,7 +80,7 @@ def enableSeparateBuildPerCPUArchitecture = false
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 android {
     compileSdkVersion 23
@@ -109,6 +109,9 @@ android {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
+        debug {
+            debuggable true
+        }
     }
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
@@ -130,7 +133,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile files('libs/libmuse_android.jar')
-    compile "com.androidplot:androidplot-core:1.2.1"
+    compile "com.androidplot:androidplot-core:1.2.2"
 }
 
 // Run this once to be able to run the application with BUCK
