--- a/EEG101/android/app/src/main/AndroidManifest.xml
+++ b/EEG101/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,6 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>ad
 
 </manifest>
