--- a/EEG101/android/app/src/main/AndroidManifest.xml
+++ b/EEG101/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
