fixed package name issue, added CircularBufferGraph, added CONTRIBUTING.md

--- a/EEG101/android/app/build.gradle
+++ b/EEG101/android/app/build.gradle
@@ -87,15 +87,16 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.eeg101"
+        applicationId "com.eeg_project"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+
     splits {
         abi {
             reset()
@@ -108,6 +109,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+
         }
         debug {
             debuggable true
@@ -130,6 +132,7 @@ android {
 
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
+    compile group: 'com.google.guava', name: 'guava', version: '15.0'
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile files('libs/libmuse_android.jar')
