--- a/EEG101/android/app/src/main/AndroidManifest.xml
+++ b/EEG101/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.eeg101"
-    android:versionCode="1"
-    android:versionName="1.0">
+    package="com.eeg_project"
+    android:versionCode="2"
+    android:versionName="1.1">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
