--- a/EEG101/.gitignore
+++ b/EEG101/.gitignore
@@ -42,6 +42,9 @@ buck-out/
 \.buckd/
 *.keystore
 
+# Cocoapods
+ios/Pods/*
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
