Bring in libMuse for interfacing with the Muse Headband

--- a/EEG101/ios/Podfile
+++ b/EEG101/ios/Podfile
@@ -5,6 +5,8 @@ platform :ios, '8.0'
 target 'EEG101' do
   use_frameworks!
 
+  pod 'libmuse', '1.2.1'
+
   target 'EEG101Tests' do
     inherit! :search_paths
     
