--- a/EEG101/package.json
+++ b/EEG101/package.json
@@ -14,10 +14,10 @@
     "lodash": "^4.16.4",
     "lottie": "^0.0.1",
     "lottie-react-native": "^1.1.1",
-    "react": "react@16.0.0-alpha.12",
+    "react": "16.0.0-alpha.12",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-dom": "^15.4.1",
-    "react-native": "^0.46.2",
+    "react-native": "0.47.1",
     "react-native-drawer": "^2.3.0",
     "react-native-i18n": "^2.0.1",
     "react-native-responsive": "^1.0.1",
